# Test_Agent

./: .env.template  .gitignore  README.md  ecosystem.config.js  pyproject.toml  requirements.txt  server_api.py  start.py
backend/: README.md  api_test_generator.py  app.py  requirements.txt  website_analyzer.py
backend/src/: api_test_generator.py  app.py  config.py  server.py  website_analyzer.py
deploy/: deploy.md  deploy.py
env/: .env.template  .gitkeep  ENVIRONMENT.md  README.md
frontend/: index.html
frontend/css/: global.css
frontend/js/: script.js
